2019-01-22 (v2.7):
	- Added Polish translation
	- Added Chinese translation
	- Added AVRDUDE support for ATmega328PB
	- Added displaying MCU signature near to the flash and EEPROM sizes
	- Fixed being unable to load xml file in the fuse bit selector window in Linux
	- Fixed flash and EEPROM file operation only being able to verify when a language other than English is chosen
	- All configuration settings are now saved across sessions instead of only the last selected preset
	- Window size is now saved across sessions
	- Use save file dialog when appropriate instead of only using an open file dialog

2018-09-20 (v2.6):
	- Fetch a different XML file when checking for updates as older versions of AVRDUDESS don't like the new format

2018-09-20 (v2.5):
	- Updated AVRDUDE to v6.3
	- libusb0.dll now included
	- Added a preset manager, you can export and import presets and manage existing presets much easier now
	- Added options to hide programmers and MCUs from their drop-down menus
	- Added support for different languages, translations go into an xml file in the Languages folder
	- Added avrdude support for ATtiny841, ATtiny441 and ATmega16U4
	- Added persistent window location, AVRDUDESS will now open in the same location that it was last closed
	- Added a preset for Arduino as ISP
	- Fixed flash and EEPROM usage bars not working if there is a space in the file path
	- Fixed form tab indexes, pressing tab will now go through form controls in order
	- When clicking the 'Fuse settings' link it will now automatically load up the selected MCU and fuse values
	- Most errors and warnings are now printed to the output console (in pretty colours!) instead of having a million pop-up boxes
	- Main window can now be properly resized
	- Improved avrdude.conf file parsing
	- Various other little fixes and improvements

2014-08-05 (v2.4):