@@ -3,14 +3,13 @@ AVRDUDESS - A GUI for AVRDUDE
 
 This is a GUI for AVRDUDE ([http://savannah.nongnu.org/projects/avrdude](http://savannah.nongnu.org/projects/avrdude)).
 
-http://blog.zakkemble.net/avrdudess-a-gui-for-avrdude/
+[http://blog.zakkemble.net/avrdudess-a-gui-for-avrdude/](http://blog.zakkemble.net/avrdudess-a-gui-for-avrdude/)
 
 ![AVRDUDESS pic](https://github.com/zkemble/AVRDUDESS/raw/master/images/avrdudess.png "")
 
 Windows:
 --------
-Requires .NET Framework 2.0 SP1. On Windows 10 and maybe 8 and 8.1 you'll probably get a prompt about installing .NET Framework 3.5 (which includes .NET 2.0), click install and it will do the rest for you.\
-If you get some other error message then you can download .NET 3.5 from https://www.microsoft.com/en-gb/download/details.aspx?id=21
+Requires .NET Framework 2.0 SP1 or newer. All systems since Windows Vista will have the required version already installed.
 
 Linux & Mac OS X:
 -----------------
@@ -32,6 +31,15 @@ Install AVRDUDE and AVR-GCC (for avr-size):
 Run AVRDUDESS with mono, you might have to run as root (sudo) so that AVRDUDE can access ports if you haven't changed any permissions or rules.d stuff:
 
     mono avrdudess.exe
+
+Building:
+---------
+You will need Microsoft Visual Studio 2015 or newer installed (older might work too). Open `./src/avrdudess.sln` and click the 'Start' button at the top and it will build and run AVRDUDESS.\
+You can find the output in `./src/avrdudess/bin/Debug/`, or `./src/avrdudess/bin/Release/` if you chose to build for Release (the drop down box second from the left of the Start button is where you can choose the configuration).
+
+Making the Installer:
+---------------------
+You will need [Inno Setup](http://www.jrsoftware.org/isinfo.php) installed. Once you've used Visual Studio to build the Release version of AVRDUDESS, run `./installer/installer.bat` and the installer exe will appear in the same directory.
 
 --------
 
